Finally fixed jumping grid for several screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,6 +243,13 @@ margin-right: auto;
   margin: 0;
 }
 
+.link-text {
+  font-family: 'Palatino Linotype';
+  font-size: 85%;
+  color: green;
+  margin: 0;
+}
+
 .grid {
   margin-left: -4vw;
 }
@@ -251,6 +258,7 @@ margin-right: auto;
   list-style-type: none;
   display: inline-block;
   padding: 0 2vw 2vh 0;
+  height: 65vh;
   overflow-wrap: break-word;
 }
 
